feat: setup handlebars create static invoice template

--- a/node-webapp-pdf/public/index.html
+++ b/node-webapp-pdf/public/index.html
@@ -4,9 +4,9 @@
     <meta charset="UTF-8">
     <title>E-Store Invoice</title>
     <link href="https://fonts.googleapis.com/css?family=Inter:400,400i,800,800i" rel="stylesheet">
-    <style type="text/css">
+    <style>
         body {
-            font-family: Nunito, sans-serif;
+            font-family: Inter, sans-serif;
             font-max-size:  14px;
         }
         .right {
@@ -109,7 +109,7 @@
 <body>
     <div class="container">
         <div class="header">
-            <img src="/favicon.svg" alt="Logo" />
+            <img src="/logo.svg" alt="Logo" />
             <div class="company-name">E-STORE</div>
         </div>
         <div style="height: 20px"></div>
